# Lidar_detection

./: CMakeLists.txt  demo.cpp  package.xml  readme.md  train.cpp
demo/: demo.cpp  demo_sub_topic.cpp  train.cpp
include/: Datatype.hpp  DetectNet.hpp
include/model/: Config.hpp  Loss.hpp  MapFeature.hpp  Model.hpp  PillarFeatureGenerate.hpp  PillarsBuilder.hpp  PillarsBuilderCuda.h  PointNet.hpp
lib/: CMakeLists.txt
lib/include/: DetectNet.hpp  TicToc.hpp
lib/include/model/: CenterHead.hpp  Config.hpp  Loss.hpp  MapFeature.hpp  Model.hpp  PillarsBuilder.hpp  PillarsBuilderCuda.h  PointNet.hpp  ResNet.hpp
lib/src/: DetectNet.cpp  PillarsBuilderCuda.cu
src/: DetectNet.cpp  PillarsBuilderCuda.cu
test/: show_groundthrust.cpp
tools/: KittiReader.hpp  RosUtils.hpp  TicToc.hpp
